--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1,5 +1,6 @@
-/* Paleta de colores
-   https://coolors.co/palette/0081a7-00afb9-fdfcdc-fed9b7-f07167
+/*
+  Paleta de colores
+  https://coolors.co/palette/052934-0081a7-fdfcdc-fed9b7-f07167
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
